--- a/day08_pytorch_basic/day_8_model_train_eval_and_io.ipynb
+++ b/day08_pytorch_basic/day_8_model_train_eval_and_io.ipynb
@@ -22,7 +22,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.0.1.post2\n"
+      "1.4.0+cpu\n"
      ]
     }
    ],
@@ -38,9 +38,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "class Net(nn.Module):\n",
@@ -84,7 +82,7 @@
      "text": [
       "Net(\n",
       "  (in_to_h1): Linear(in_features=3, out_features=10, bias=False)\n",
-      "  (h1drop): Dropout(p=0.5)\n",
+      "  (h1drop): Dropout(p=0.5, inplace=False)\n",
       "  (h1_to_out): Linear(in_features=10, out_features=2, bias=False)\n",
       ")\n"
      ]
@@ -109,7 +107,7 @@
     {
      "data": {
       "text/plain": [
-       "tensor([[0.4617, 0.2211, 0.0504]])"
+       "tensor([[0.7148, 0.6333, 0.3512]])"
       ]
      },
      "execution_count": 4,
@@ -138,26 +136,26 @@
      "output_type": "stream",
      "text": [
       "in_to_h1\n",
-      "tensor([[ 0.4802, -0.3685, -0.1947],\n",
-      "        [-0.1639,  0.1439,  0.1251],\n",
-      "        [-0.3477, -0.4726, -0.4202],\n",
-      "        [ 0.2857,  0.2486, -0.4135],\n",
-      "        [-0.3216, -0.1887,  0.1364],\n",
-      "        [ 0.3519, -0.3512, -0.4188],\n",
-      "        [ 0.2502, -0.1079, -0.4374],\n",
-      "        [ 0.4281, -0.5304, -0.1201],\n",
-      "        [ 0.2121, -0.1702,  0.1905],\n",
-      "        [ 0.4310,  0.5214, -0.1435]])\n",
+      "tensor([[ 0.4371, -0.0972, -0.0303],\n",
+      "        [-0.0210, -0.3668,  0.1256],\n",
+      "        [-0.3781, -0.4160, -0.1196],\n",
+      "        [ 0.2291, -0.2667, -0.0467],\n",
+      "        [-0.1563, -0.5320, -0.4413],\n",
+      "        [-0.3709,  0.2313, -0.1089],\n",
+      "        [-0.1639, -0.3427, -0.0148],\n",
+      "        [-0.5054,  0.3645,  0.5018],\n",
+      "        [-0.3670,  0.2435, -0.2550],\n",
+      "        [ 0.4895,  0.2177,  0.1252]])\n",
       "h1\n",
-      "tensor([[ 0.1296, -0.0375, -0.2786,  0.1645, -0.1813,  0.0636,  0.0695,  0.0741,\n",
-      "          0.0698,  0.2978]])\n",
+      "tensor([[ 0.2357, -0.2004, -0.5195, -0.0215, -0.5396, -0.1556, -0.3269,  0.0458,\n",
+      "         -0.1951,  0.4867]])\n",
       "\n",
       "dropout\n",
-      "tensor([[ 0.0000, -0.0751, -0.0000,  0.3290, -0.3626,  0.1272,  0.1390,  0.1483,\n",
-      "          0.0000,  0.5955]])\n",
+      "tensor([[ 0.4714, -0.4009, -0.0000, -0.0000, -0.0000, -0.3112, -0.6538,  0.0000,\n",
+      "         -0.0000,  0.9734]])\n",
       "\n",
       "out\n",
-      "tensor([[-0.1116, -0.0689]])\n",
+      "tensor([[-0.2470,  0.4726]])\n",
       "\n"
      ]
     }
@@ -184,26 +182,26 @@
      "output_type": "stream",
      "text": [
       "in_to_h1\n",
-      "tensor([[ 0.4802, -0.3685, -0.1947],\n",
-      "        [-0.1639,  0.1439,  0.1251],\n",
-      "        [-0.3477, -0.4726, -0.4202],\n",
-      "        [ 0.2857,  0.2486, -0.4135],\n",
-      "        [-0.3216, -0.1887,  0.1364],\n",
-      "        [ 0.3519, -0.3512, -0.4188],\n",
-      "        [ 0.2502, -0.1079, -0.4374],\n",
-      "        [ 0.4281, -0.5304, -0.1201],\n",
-      "        [ 0.2121, -0.1702,  0.1905],\n",
-      "        [ 0.4310,  0.5214, -0.1435]])\n",
+      "tensor([[ 0.4371, -0.0972, -0.0303],\n",
+      "        [-0.0210, -0.3668,  0.1256],\n",
+      "        [-0.3781, -0.4160, -0.1196],\n",
+      "        [ 0.2291, -0.2667, -0.0467],\n",
+      "        [-0.1563, -0.5320, -0.4413],\n",
+      "        [-0.3709,  0.2313, -0.1089],\n",
+      "        [-0.1639, -0.3427, -0.0148],\n",
+      "        [-0.5054,  0.3645,  0.5018],\n",
+      "        [-0.3670,  0.2435, -0.2550],\n",
+      "        [ 0.4895,  0.2177,  0.1252]])\n",
       "h1\n",
-      "tensor([[ 0.1296, -0.0375, -0.2786,  0.1645, -0.1813,  0.0636,  0.0695,  0.0741,\n",
-      "          0.0698,  0.2978]])\n",
+      "tensor([[ 0.2357, -0.2004, -0.5195, -0.0215, -0.5396, -0.1556, -0.3269,  0.0458,\n",
+      "         -0.1951,  0.4867]])\n",
       "\n",
       "dropout\n",
-      "tensor([[0.0000, -0.0000, -0.0000, 0.0000, -0.0000, 0.1272, 0.1390, 0.0000, 0.1396,\n",
-      "         0.5955]])\n",
+      "tensor([[ 0.4714, -0.0000, -0.0000, -0.0000, -0.0000, -0.0000, -0.6538,  0.0916,\n",
+      "         -0.3902,  0.9734]])\n",
       "\n",
       "out\n",
-      "tensor([[ 0.0461, -0.1098]])\n",
+      "tensor([[-0.2544,  0.5187]])\n",
       "\n"
      ]
     }
@@ -229,26 +227,26 @@
      "output_type": "stream",
      "text": [
       "in_to_h1\n",
-      "tensor([[ 0.4802, -0.3685, -0.1947],\n",
-      "        [-0.1639,  0.1439,  0.1251],\n",
-      "        [-0.3477, -0.4726, -0.4202],\n",
-      "        [ 0.2857,  0.2486, -0.4135],\n",
-      "        [-0.3216, -0.1887,  0.1364],\n",
-      "        [ 0.3519, -0.3512, -0.4188],\n",
-      "        [ 0.2502, -0.1079, -0.4374],\n",
-      "        [ 0.4281, -0.5304, -0.1201],\n",
-      "        [ 0.2121, -0.1702,  0.1905],\n",
-      "        [ 0.4310,  0.5214, -0.1435]])\n",
+      "tensor([[ 0.4371, -0.0972, -0.0303],\n",
+      "        [-0.0210, -0.3668,  0.1256],\n",
+      "        [-0.3781, -0.4160, -0.1196],\n",
+      "        [ 0.2291, -0.2667, -0.0467],\n",
+      "        [-0.1563, -0.5320, -0.4413],\n",
+      "        [-0.3709,  0.2313, -0.1089],\n",
+      "        [-0.1639, -0.3427, -0.0148],\n",
+      "        [-0.5054,  0.3645,  0.5018],\n",
+      "        [-0.3670,  0.2435, -0.2550],\n",
+      "        [ 0.4895,  0.2177,  0.1252]])\n",
       "h1\n",
-      "tensor([[ 0.1296, -0.0375, -0.2786,  0.1645, -0.1813,  0.0636,  0.0695,  0.0741,\n",
-      "          0.0698,  0.2978]])\n",
+      "tensor([[ 0.2357, -0.2004, -0.5195, -0.0215, -0.5396, -0.1556, -0.3269,  0.0458,\n",
+      "         -0.1951,  0.4867]])\n",
       "\n",
       "dropout\n",
-      "tensor([[ 0.1296, -0.0375, -0.2786,  0.1645, -0.1813,  0.0636,  0.0695,  0.0741,\n",
-      "          0.0698,  0.2978]])\n",
+      "tensor([[ 0.2357, -0.2004, -0.5195, -0.0215, -0.5396, -0.1556, -0.3269,  0.0458,\n",
+      "         -0.1951,  0.4867]])\n",
       "\n",
       "out\n",
-      "tensor([[ 0.0411, -0.1151]])\n",
+      "tensor([[-0.4398,  0.2901]])\n",
       "\n"
      ]
     }
@@ -275,26 +273,26 @@
      "output_type": "stream",
      "text": [
       "in_to_h1\n",
-      "tensor([[ 0.4802, -0.3685, -0.1947],\n",
-      "        [-0.1639,  0.1439,  0.1251],\n",
-      "        [-0.3477, -0.4726, -0.4202],\n",
-      "        [ 0.2857,  0.2486, -0.4135],\n",
-      "        [-0.3216, -0.1887,  0.1364],\n",
-      "        [ 0.3519, -0.3512, -0.4188],\n",
-      "        [ 0.2502, -0.1079, -0.4374],\n",
-      "        [ 0.4281, -0.5304, -0.1201],\n",
-      "        [ 0.2121, -0.1702,  0.1905],\n",
-      "        [ 0.4310,  0.5214, -0.1435]])\n",
+      "tensor([[ 0.4371, -0.0972, -0.0303],\n",
+      "        [-0.0210, -0.3668,  0.1256],\n",
+      "        [-0.3781, -0.4160, -0.1196],\n",
+      "        [ 0.2291, -0.2667, -0.0467],\n",
+      "        [-0.1563, -0.5320, -0.4413],\n",
+      "        [-0.3709,  0.2313, -0.1089],\n",
+      "        [-0.1639, -0.3427, -0.0148],\n",
+      "        [-0.5054,  0.3645,  0.5018],\n",
+      "        [-0.3670,  0.2435, -0.2550],\n",
+      "        [ 0.4895,  0.2177,  0.1252]])\n",
       "h1\n",
-      "tensor([[ 0.1296, -0.0375, -0.2786,  0.1645, -0.1813,  0.0636,  0.0695,  0.0741,\n",
-      "          0.0698,  0.2978]])\n",
+      "tensor([[ 0.2357, -0.2004, -0.5195, -0.0215, -0.5396, -0.1556, -0.3269,  0.0458,\n",
+      "         -0.1951,  0.4867]])\n",
       "\n",
       "dropout\n",
-      "tensor([[ 0.0000, -0.0000, -0.5573,  0.0000, -0.0000,  0.1272,  0.1390,  0.1483,\n",
-      "          0.1396,  0.5955]])\n",
+      "tensor([[ 0.4714, -0.0000, -0.0000, -0.0000, -0.0000, -0.3112, -0.6538,  0.0916,\n",
+      "         -0.0000,  0.0000]])\n",
       "\n",
       "out\n",
-      "tensor([[ 0.1003, -0.2834]])\n",
+      "tensor([[-0.2925,  0.1435]])\n",
       "\n"
      ]
     }
@@ -322,7 +320,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/lovit/anaconda3/envs/pytorch/lib/python3.7/site-packages/torch/serialization.py:251: UserWarning: Couldn't retrieve source code for container of type Net. It won't be checked for correctness upon loading.\n",
+      "/home/lovit/anaconda3/envs/pytorch/lib/python3.7/site-packages/torch/serialization.py:360: UserWarning: Couldn't retrieve source code for container of type Net. It won't be checked for correctness upon loading.\n",
       "  \"type \" + obj.__name__ + \". It won't be checked \"\n"
      ]
     }
@@ -342,33 +340,33 @@
      "output_type": "stream",
      "text": [
       "in_to_h1\n",
-      "tensor([[ 0.4802, -0.3685, -0.1947],\n",
-      "        [-0.1639,  0.1439,  0.1251],\n",
-      "        [-0.3477, -0.4726, -0.4202],\n",
-      "        [ 0.2857,  0.2486, -0.4135],\n",
-      "        [-0.3216, -0.1887,  0.1364],\n",
-      "        [ 0.3519, -0.3512, -0.4188],\n",
-      "        [ 0.2502, -0.1079, -0.4374],\n",
-      "        [ 0.4281, -0.5304, -0.1201],\n",
-      "        [ 0.2121, -0.1702,  0.1905],\n",
-      "        [ 0.4310,  0.5214, -0.1435]])\n",
+      "tensor([[ 0.4371, -0.0972, -0.0303],\n",
+      "        [-0.0210, -0.3668,  0.1256],\n",
+      "        [-0.3781, -0.4160, -0.1196],\n",
+      "        [ 0.2291, -0.2667, -0.0467],\n",
+      "        [-0.1563, -0.5320, -0.4413],\n",
+      "        [-0.3709,  0.2313, -0.1089],\n",
+      "        [-0.1639, -0.3427, -0.0148],\n",
+      "        [-0.5054,  0.3645,  0.5018],\n",
+      "        [-0.3670,  0.2435, -0.2550],\n",
+      "        [ 0.4895,  0.2177,  0.1252]])\n",
       "h1\n",
-      "tensor([[ 0.1296, -0.0375, -0.2786,  0.1645, -0.1813,  0.0636,  0.0695,  0.0741,\n",
-      "          0.0698,  0.2978]])\n",
+      "tensor([[ 0.2357, -0.2004, -0.5195, -0.0215, -0.5396, -0.1556, -0.3269,  0.0458,\n",
+      "         -0.1951,  0.4867]])\n",
       "\n",
       "dropout\n",
-      "tensor([[ 0.1296, -0.0375, -0.2786,  0.1645, -0.1813,  0.0636,  0.0695,  0.0741,\n",
-      "          0.0698,  0.2978]])\n",
+      "tensor([[ 0.2357, -0.2004, -0.5195, -0.0215, -0.5396, -0.1556, -0.3269,  0.0458,\n",
+      "         -0.1951,  0.4867]])\n",
       "\n",
       "out\n",
-      "tensor([[ 0.0411, -0.1151]])\n",
+      "tensor([[-0.4398,  0.2901]])\n",
       "\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "tensor([[ 0.0411, -0.1151]], grad_fn=<MmBackward>)"
+       "tensor([[-0.4398,  0.2901]], grad_fn=<MmBackward>)"
       ]
      },
      "execution_count": 10,
@@ -418,7 +416,7 @@
       "text/plain": [
        "Net(\n",
        "  (in_to_h1): Linear(in_features=3, out_features=10, bias=False)\n",
-       "  (h1drop): Dropout(p=0.5)\n",
+       "  (h1drop): Dropout(p=0.5, inplace=False)\n",
        "  (h1_to_out): Linear(in_features=10, out_features=2, bias=False)\n",
        ")"
       ]
@@ -447,33 +445,33 @@
      "output_type": "stream",
      "text": [
       "in_to_h1\n",
-      "tensor([[ 0.4802, -0.3685, -0.1947],\n",
-      "        [-0.1639,  0.1439,  0.1251],\n",
-      "        [-0.3477, -0.4726, -0.4202],\n",
-      "        [ 0.2857,  0.2486, -0.4135],\n",
-      "        [-0.3216, -0.1887,  0.1364],\n",
-      "        [ 0.3519, -0.3512, -0.4188],\n",
-      "        [ 0.2502, -0.1079, -0.4374],\n",
-      "        [ 0.4281, -0.5304, -0.1201],\n",
-      "        [ 0.2121, -0.1702,  0.1905],\n",
-      "        [ 0.4310,  0.5214, -0.1435]])\n",
+      "tensor([[ 0.4371, -0.0972, -0.0303],\n",
+      "        [-0.0210, -0.3668,  0.1256],\n",
+      "        [-0.3781, -0.4160, -0.1196],\n",
+      "        [ 0.2291, -0.2667, -0.0467],\n",
+      "        [-0.1563, -0.5320, -0.4413],\n",
+      "        [-0.3709,  0.2313, -0.1089],\n",
+      "        [-0.1639, -0.3427, -0.0148],\n",
+      "        [-0.5054,  0.3645,  0.5018],\n",
+      "        [-0.3670,  0.2435, -0.2550],\n",
+      "        [ 0.4895,  0.2177,  0.1252]])\n",
       "h1\n",
-      "tensor([[ 0.1296, -0.0375, -0.2786,  0.1645, -0.1813,  0.0636,  0.0695,  0.0741,\n",
-      "          0.0698,  0.2978]])\n",
+      "tensor([[ 0.2357, -0.2004, -0.5195, -0.0215, -0.5396, -0.1556, -0.3269,  0.0458,\n",
+      "         -0.1951,  0.4867]])\n",
       "\n",
       "dropout\n",
-      "tensor([[ 0.1296, -0.0375, -0.2786,  0.1645, -0.1813,  0.0636,  0.0695,  0.0741,\n",
-      "          0.0698,  0.2978]])\n",
+      "tensor([[ 0.2357, -0.2004, -0.5195, -0.0215, -0.5396, -0.1556, -0.3269,  0.0458,\n",
+      "         -0.1951,  0.4867]])\n",
       "\n",
       "out\n",
-      "tensor([[ 0.0411, -0.1151]])\n",
+      "tensor([[-0.4398,  0.2901]])\n",
       "\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "tensor([[ 0.0411, -0.1151]], grad_fn=<MmBackward>)"
+       "tensor([[-0.4398,  0.2901]], grad_fn=<MmBackward>)"
       ]
      },
      "execution_count": 13,
@@ -484,6 +482,13 @@
    "source": [
     "loaded_net(x, debug=True)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -502,7 +507,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
