--- a/day08_pytorch_basic/day_8_softmax_regression_for_document_classification.ipynb
+++ b/day08_pytorch_basic/day_8_softmax_regression_for_document_classification.ipynb
@@ -147,6 +147,126 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## DataSet and DataLoader\n",
+    "\n",
+    "DataSet 은 DataLoader 의 input 입니다. 각 index 에 해당하는 값을 return 하도록 getitem 과 데이터셋의 크기를 측정할 수 있는 len 만 구현하면 됩니다. 만약 데이터가 너무 큰 경우에는 init 에 파일 주소를 입력받고, getitem 에서 파일을 하나씩 읽어도 됩니다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "len trainset = 2382\n",
+      "len testset = 1584\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(tensor([0., 0., 0.,  ..., 0., 0., 0.]), tensor([0]))"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class NewsGroupDataset(torch.utils.data.Dataset):\n",
+    "    def __init__(self, X, y):\n",
+    "        self.X = X\n",
+    "        self.y = y\n",
+    "\n",
+    "    def __len__(self):\n",
+    "        return self.X.shape[0]\n",
+    "\n",
+    "    def __getitem__(self, i):\n",
+    "        x = torch.FloatTensor(self.X[i].todense())[0]\n",
+    "        y = torch.LongTensor(self.y[i:i+1])\n",
+    "        return x, y\n",
+    "\n",
+    "train_set = NewsGroupDataset(x_train, y_train)\n",
+    "test_set = NewsGroupDataset(x_test, y_test)\n",
+    "\n",
+    "print('len trainset = {}'.format(len(train_set)))\n",
+    "print('len testset = {}'.format(len(test_set)))\n",
+    "train_set[0]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "DataLoader 는 Dataset 을 이용하여 minibatch 를 만들어주고 shuffling 도 지원해주는 유틸입니다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_loader = torch.utils.data.DataLoader(train_set, batch_size=16, shuffle=True)\n",
+    "test_loader = torch.utils.data.DataLoader(test_set, batch_size=64)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([16, 6535])\n",
+      "torch.Size([16, 1])\n"
+     ]
+    }
+   ],
+   "source": [
+    "for x_batch, y_batch in train_loader:\n",
+    "    print(x_batch.size())\n",
+    "    print(y_batch.size())\n",
+    "    break"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "학습데이터는 2382 개였지만, batch size 가 16 이기 때문에 mini batch 의 개수는 149 개 입니다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "149"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(train_loader)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Model\n",
     "\n",
     "Feed forward neural netowrk 를 만듭니다. torch.nn.Module 을 상속하여 init, forward 함수만 구현하면 됩니다.\n",
@@ -171,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -208,7 +328,7 @@
        "array([0, 1, 2, 3])"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -230,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -238,15 +358,13 @@
      "output_type": "stream",
      "text": [
       "layer = 6535 - 128 - 32 - 4\n",
-      "n data = 2382\n",
-      "num mini-batch = 37\n"
+      "n data = 2382\n"
      ]
     }
    ],
    "source": [
     "# Parameters\n",
     "epochs = 10\n",
-    "batch_size = 64\n",
     "\n",
     "input_dim = x_train.shape[1]\n",
     "hidden_1_dim = 128\n",
@@ -256,8 +374,7 @@
     "\n",
     "print('layer = {} - {} - {} - {}'.format(\n",
     "    input_dim, hidden_1_dim, hidden_2_dim, n_classes))\n",
-    "print('n data = {}'.format(n_data))\n",
-    "print('num mini-batch = {}'.format(n_data // batch_size))"
+    "print('n data = {}'.format(n_data))"
    ]
   },
   {
@@ -271,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -303,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -336,29 +453,6 @@
     "    # TODO\n",
     "```\n",
     "\n",
-    "mini batch 는 데이터의 일부로 loss 를 계산한 다음, 이를 반영하여 weight parameter 를 학습하는 것입니다. 데이터의 크기가 100 일 때, 한 번에 5 개의 데이터를 이용한다면 총 20 번의 mini batch 를 이용한 학습이 됩니다. 이는 다음처럼 구현합니다. begin (b), end (e) index 를 만들고, x 와 y 에서 b 부터 e 까지 slicing 을 합니다. 이 때 x 의 형식은 scipy.sparse 입니다. \n",
-    "\n",
-    "```python\n",
-    "for i in range(n_data // batch_size):\n",
-    "\n",
-    "    b = i * batch_size\n",
-    "    e = min(n_data, (i+1) * batch_size)\n",
-    "\n",
-    "    x_batch = x_train[b:e] # type : sparse matrix\n",
-    "    y_batch = y_train[b:e] # type : numpy.ndarray\n",
-    "```\n",
-    "\n",
-    "이를 먼저 numpy.ndarray 로 변환한 뒤, torch.Tensor 로 변환합니다. 한 번에 x_train 을 scipy.sparse 에서 numpy.ndarray 로 변환하면 sparse matrix 가 dense matrix 로 변하면서 지나치게 많은 메모리를 소모하게 됩니다. \n",
-    "\n",
-    "x 는 TF-IDF 값이기 때문에 소수값을 포함합니다. 이는 torch.FloatTensor 로 구현합니다. label 은 정수이기 때문에 torch.LongTensor 로 감쌉니다.\n",
-    "\n",
-    "```python\n",
-    "for i in range(n_data // batch_size):\n",
-    "    # ...\n",
-    "    x_batch = torch.FloatTensor(x_batch.todense())\n",
-    "    y_batch = torch.LongTensor(y_batch)\n",
-    "```\n",
-    "\n",
     "항상 optimizer 에 이전 step 에서 이용한 gradient 를 지운 뒤, forwarding, back-propagation 을 합니다.\n",
     "\n",
     "```python\n",
@@ -372,215 +466,13 @@
     "```python\n",
     "for i in range(n_data // batch_size):\n",
     "    # ...\n",
-    "    x_pred = model(x_batch)\n",
-    "    loss = criterion(x_pred, y_batch)\n",
+    "    y_pred = model(x_batch)\n",
+    "    loss = criterion(y_pred, y_batch)\n",
     "    loss.backward()\n",
     "    optimizer.step()\n",
     "```\n",
     "\n",
-    "loss 의 data 에는 loss 값이 저장되어 있습니다. 이는 torch.Tensor 이니 numpy() 를 이용하여 숫자로 변환하여 loss_sum 에 누적합니다.\n",
-    "\n",
-    "```python\n",
-    "for i in range(n_data // batch_size):\n",
-    "    # ...\n",
-    "    loss_sum += loss.data.numpy()\n",
-    "```\n",
-    "\n",
-    "매 epoch 마다 loss 가 줄어듦을 확인할 수 있습니다."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "## epoch = 0, training loss = 1.324s = 1.343\n",
-      "## epoch = 1, training loss = 0.835s = 0.889\n",
-      "## epoch = 2, training loss = 0.279s = 0.293\n",
-      "## epoch = 3, training loss = 0.116s = 0.116\n",
-      "## epoch = 4, training loss = 0.070s = 0.068\n",
-      "## epoch = 5, training loss = 0.052s = 0.049\n",
-      "## epoch = 6, training loss = 0.043s = 0.040\n",
-      "## epoch = 7, training loss = 0.038s = 0.035\n",
-      "## epoch = 8, training loss = 0.035s = 0.032\n",
-      "## epoch = 9, training loss = 0.033s = 0.030\n"
-     ]
-    }
-   ],
-   "source": [
-    "def train(x_train, y_train, model, loss_func, optimizer, batch_size):\n",
-    "\n",
-    "    n_data = x_train.shape[0]\n",
-    "\n",
-    "    # Loop over all epochs\n",
-    "    for epoch in range(epochs):\n",
-    "        loss_sum = 0\n",
-    "\n",
-    "        for i in range(n_data // batch_size):\n",
-    "            # select mini-batch data\n",
-    "            b = i * batch_size\n",
-    "            e = min(n_data, (i+1) * batch_size)\n",
-    "            x_batch = x_train[b:e] # type : sparse matrix\n",
-    "            y_batch = y_train[b:e] # type : numpy.ndarray\n",
-    "\n",
-    "            # scipy.sparse -> numpy.ndarray -> torch.Tensor\n",
-    "            x_batch = torch.FloatTensor(x_batch.todense())\n",
-    "            y_batch = torch.LongTensor(y_batch)\n",
-    "\n",
-    "            # Forward -> Backward -> Optimize\n",
-    "            optimizer.zero_grad() # Make the gradient buffer zero\n",
-    "            x_pred = model(x_batch)\n",
-    "            loss = loss_func(x_pred, y_batch)\n",
-    "            loss.backward()\n",
-    "            optimizer.step()\n",
-    "\n",
-    "            # cumulate loss\n",
-    "            loss_sum += loss.data.numpy()\n",
-    "\n",
-    "            if i % 10 == 0:\n",
-    "                loss_tmp = loss_sum / (i+1)\n",
-    "                print('\\repoch = {}, batch = {}, training loss = {}'.format(\n",
-    "                    epoch, i+1, '%.3f' % loss_tmp), end='')\n",
-    "\n",
-    "        print('\\r## epoch = {}, training loss = {}'.format(epoch, '%.3f' % (loss_sum / (i+1)) ))\n",
-    "    return model\n",
-    "\n",
-    "model = train(x_train, y_train, model, loss_func, optimizer, batch_size)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Training accuracy test\n",
-    "\n",
-    "테스트 데이터에 대하여 정확도를 측정합니다. 데이터의 크기가 얼마 크지 않기 때문에 한 번에 dense matrix 로 변환하였습니다. 그리고 torch.Tensor 로 변환하여 모델에 입력합니다.\n",
-    "\n",
-    "```python\n",
-    "x_test_tensor = torch.FloatTensor(x_test.todense())\n",
-    "```\n",
-    "\n",
-    "forward 함수가 call 함수로 지정되어 있기 때문에 아래 두 구문은 같은 기능을 수행합니다.\n",
-    "\n",
-    "```python\n",
-    "y_test_pred = model(x_test_tensor)\n",
-    "y_test_pred = model.forward(x_test_tensor)\n",
-    "```\n",
-    "\n",
-    "그 결과 1584 개의 데이터에 대하여 각각 4 개의 클래스와의 softmax 값이 계산됩니다."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(1584, 6535)"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "x_test.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "torch.Size([1584, 4])\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Make test batch data\n",
-    "x_test_tensor = torch.FloatTensor(x_test.todense())\n",
-    "y_test_pred = model(x_test_tensor)\n",
-    "\n",
-    "print(y_test_pred.size())"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "torch.max 는 torch.Tensor 에 대하여 dim 기준으로 최대값과 그 값을 지니는 index 를 출력합니다. dim=1 이기 때문에 [1584, 4] size 에서 4 인, column 기준으로 max 값을 찾습니다. return 은 max value 와 index 로 나뉘어져 됩니다."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "torch.Size([1584])\n",
-      "torch.Size([1584])\n"
-     ]
-    }
-   ],
-   "source": [
-    "score, predicted = torch.max(y_test_pred.data, dim=1)\n",
-    "\n",
-    "print(score.size())\n",
-    "print(predicted.size())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor([1.3905, 7.6429, 7.4244])"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "score[:3]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor([3, 3, 2])"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "predicted[:3]"
+    "loss 의 data 에는 loss 값이 저장되어 있습니다. 이는 torch.Tensor 이니 numpy() 를 이용하여 숫자로 변환하여 loss_sum 에 누적합니다. 매 epoch 마다 loss 가 줄어듦을 확인할 수 있습니다."
    ]
   },
   {
@@ -592,49 +484,201 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(1584,)\n",
-      "(1584,)\n"
+      "epoch = 0/10 training loss = 0.9946g loss = 0.9946\n",
+      "epoch = 1/10 training loss = 0.1481g loss = 0.1481\n",
+      "epoch = 2/10 training loss = 0.05485 loss = 0.05485\n",
+      "epoch = 3/10 training loss = 0.03889 loss = 0.03889\n",
+      "epoch = 4/10 training loss = 0.03313 loss = 0.03313\n",
+      "epoch = 5/10 training loss = 0.03105 loss = 0.03105\n",
+      "epoch = 6/10 training loss = 0.02961 loss = 0.02961\n",
+      "epoch = 7/10 training loss = 0.03051 loss = 0.03051\n",
+      "epoch = 8/10 training loss = 0.0299g loss = 0.02992\n",
+      "epoch = 9/10 training loss = 0.02974 loss = 0.02974\n"
      ]
     }
    ],
    "source": [
-    "print(y_test.shape)\n",
-    "print(predicted.numpy().shape)"
+    "def train(loader, model, loss_func, optimizer, epochs):\n",
+    "\n",
+    "    for epoch in range(epochs):\n",
+    "        loss_sum = 0\n",
+    "        n_batches = len(loader)\n",
+    "\n",
+    "        for i, (x_batch, y_batch) in enumerate(loader):\n",
+    "            optimizer.zero_grad()\n",
+    "            y_pred = model(x_batch)\n",
+    "            # size: (batch, 1) -> (batch,)\n",
+    "            y_batch = y_batch.squeeze(dim=1)\n",
+    "            loss = loss_func(y_pred, y_batch)\n",
+    "            loss.backward()\n",
+    "            optimizer.step()\n",
+    "\n",
+    "            loss_sum += loss.data.numpy()\n",
+    "            if i % 10 == 0:\n",
+    "                loss_tmp = loss_sum / (i+1)\n",
+    "                print(f'\\repoch = {epoch}, batch = {i+1}/{n_batches}, training loss = {loss_tmp:.4}', end='')\n",
+    "        print(f'\\repoch = {epoch}/{epochs} training loss = {loss_tmp:.4}')\n",
+    "\n",
+    "    return model\n",
+    "\n",
+    "model = train(train_loader, model, loss_func, optimizer, epochs)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "numpy.ndarray 를 이용하여 predicted 된 값과 label 이 같은 indices 를 찾습니다. 그 길이만큼 제대로된 prediction 을 수행한 것입니다."
+    "## Test accuracy\n",
+    "\n",
+    "테스트 성능도 DataLoader 를 이용할 수 있습니다."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 18,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "for x_batch, y_batch in test_loader:\n",
+    "    y_batch = y_batch.squeeze(dim=1)\n",
+    "    y_pred = model(x_batch)\n",
+    "    score, indices = torch.max(y_pred.data, dim=1)    \n",
+    "    break"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "y_pred 의 size 는 (batch, class) 입니다. torch.max 는 torch.Tensor 에 대하여 dim 기준으로 최대값과 그 값을 지니는 index 를 출력합니다. (batch, class) size 에서 class column 기준으로 max 값을 찾습니다. return 은 max value 와 index 로 나뉘어져 됩니다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "accuracy = 0.9071969696969697\n"
+      "torch.Size([64])\n",
+      "torch.Size([64, 4])\n",
+      "torch.Size([64]) torch.Size([64])\n"
      ]
     }
    ],
    "source": [
-    "n_correct = np.where(y_test == predicted.numpy())[0].shape[0]\n",
-    "accuracy = n_correct / y_test.shape[0]\n",
-    "\n",
-    "print('accuracy = {}'.format(accuracy))"
+    "print(y_batch.size())\n",
+    "print(y_pred.size())\n",
+    "print(score.size(), indices.size())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([ 2.0251, 11.4719,  9.8125])\n",
+      "tensor([3, 3, 2])\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(score[:3])\n",
+    "print(indices[:3])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "그런데 dropout 과 같은 기법은 학습 시에는 작동하고, 테스트 시에는 작동하지 않습니다. 그렇기 때문에 테스트 시에는 nn.Module 에 eval() 함수를, 학습 시에는  train() 함수를 실행하여 각각의 모드가 실행될 수 있도록 합니다. eval() 이 한 번 실행되면 모델은 더 학습되지 않습니다. 추가 학습을 하려면 반드시 train() 을 실행시켜야 합니다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "test accuracy = 0.911\n"
+     ]
+    }
+   ],
+   "source": [
+    "def test_accuracy(model, test_loader):\n",
+    "    n_corrects, n_total = 0, 0\n",
+    "    for x_batch, y_batch in test_loader:\n",
+    "        y_batch = y_batch.squeeze(dim=1)\n",
+    "        y_pred = model(x_batch)\n",
+    "        score, indices = torch.max(y_pred.data, dim=1)\n",
+    "        n_corrects += (indices == y_batch).sum().numpy()\n",
+    "        n_total += y_pred.size()[0]\n",
+    "    accuracy = n_corrects / n_total\n",
+    "    return accuracy\n",
+    "\n",
+    "model.eval()\n",
+    "accuracy = test_accuracy(model, test_loader)\n",
+    "print(f'test accuracy = {accuracy:.4}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## IO\n",
+    "\n",
+    "학습된 모델은 save 를 이용하여 저장하고 load 를 이용하여 불러올 수 있습니다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/lovit/anaconda3/envs/pytorch/lib/python3.7/site-packages/torch/serialization.py:360: UserWarning: Couldn't retrieve source code for container of type FeedForwardNN. It won't be checked for correctness upon loading.\n",
+      "  \"type \" + obj.__name__ + \". It won't be checked \"\n"
+     ]
+    }
+   ],
+   "source": [
+    "model_path = 'newsgroup_net.pt'\n",
+    "torch.save(model, model_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9109848484848485"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "loaded_model = torch.load(model_path)\n",
+    "loaded_model.eval()\n",
+    "test_accuracy(loaded_model, test_loader)"
+   ]
   },
   {
    "cell_type": "code",
